# datalake-framework

./: .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
datalake/: __init__.py  exceptions.py  helpers.py  interface.py  main.py  telemetry.py
datalake/provider/: aws.py  azure.py  gcp.py  local.py
datalake/provider/aws/: storage.py
datalake/provider/gcp/: storage.py
docs/: cloud-resources.rst  cloud.rst  conf.py  datacatalog.rst  index.rst  monitoring.rst  storage.rst
docs/api/datalake/: exceptions.rst  helpers.rst  interface.rst
docs/source/: conf.py  datalake.rst  index.rst
docs/source/api/: index.rst
docs/source/api/datalake/: telemetry.rst
tests/: __init__.py  storage.py  test_aws.py  test_catalog.py  test_config.py  test_gcp.py  test_helpers.py  test_local.py
tests/bucket/an-die-freude/: part-1.txt  part-2.txt  part-3.txt  part-4.txt  part-5.txt
tests/dataset/stats/INSEE/mises-en-cause/: mises-en-cause_2019.csv
tests/files/: catalog.json  dataset1.csv  dataset2.csv  dataset3.csv  schiller.txt  secret.json  secret.txt  storage.json
tests/injection/: monitoring.py
tests/providers/: secret.py  storage.py  test_aws.py  test_azure.py  test_gcp.py  test_local.py
tests/providers/aws/: test_secret.py  test_storage.py
tests/providers/azure/: test_secret.py  test_storage.py
tests/providers/gcp/: test_secret.py  test_storage.py
tests/providers/local/: test_secret.py  test_storage.py
