[tool.poetry]
authors = ["Didier SCHMITT <dschmitt@equancy.com>"]
description = "Datalake Framework"
license = "MIT"
name = "datalake-framework"
packages = [
  {include = "datalake"},
]
repository = "https://git.equancy.cloud/equancy/data-technologies/datalake-framework"
version = "0.0.0-alpha.2"

[tool.poetry.dependencies]
boto3 = "^1.20.4"
google-cloud-pubsub = "^2.9.0"
google-cloud-storage = "^1.42.3"
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = "^6.0.2"
flake9 = "^3.8.3"
pytest = "^6.2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flake8]
ignore = "E501,W503"

[tool.pytest.ini_options]
addopts = "-ra -v --no-header"
filterwarnings = [
  # see https://github.com/googleapis/python-api-common-protos/issues/23
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:Call to deprecated create function ServiceDescriptor",
  "ignore:Call to deprecated create function MethodDescriptor",
]
minversion = "6.0"
testpaths = ["tests"]
